src/objects/Log_Errori__c.object
<CustomObject>
    <description>Oggetto utilizzato per scrivere gli errori restituiti dai Web service</description>
    <fields>
        <fullName>Codice_errore__c</fullName>
        <label>Codice errore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descrizione__c</fullName>
        <label>Descrizione</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loyalty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loyalty</label>
        <referenceTo>Loyalty__c</referenceTo>
        <relationshipLabel>Log Errori</relationshipLabel>
        <relationshipName>Log_Errori</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Richiesta_Voucher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Richiesta Voucher</label>
        <referenceTo>Richiesta_Voucher__c</referenceTo>
        <relationshipLabel>Log Errori</relationshipLabel>
        <relationshipName>Log_Errori</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Log Errori</label>
    <nameField>
        <displayFormat>E-{000000000}</displayFormat>
        <label>Numero Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Errori</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>